Fix minor Apply iframe height issue.
In some situations, the Apply iframe is too short and it gets a nested scrollbar. It's most obvious when changing the "zoom" size or if viewing on mobile.

Fix changes:
- size to use `rem` vs `px` for browser zoom levels
- uses "mobile first" breakpoint that's taller for mobile and shorter for desktop.

No good way to test in localhost and staging because the iframe won't load. Attempted to test by applying new sizes to the production site via the debugger.

Rebuilding the css is problematic. Still must delete the style.css file and run the *release build* to get the correct output (not the `serve` or `start).

--- a/assets/stylesheets/application/components/_apply.scss
+++ b/assets/stylesheets/application/components/_apply.scss
@@ -3,6 +3,9 @@
 .site-c-apply {
   overflow: auto;
   width: 100%;
-  min-height: 2500px;
+  min-height: 175rem; /* mobile first - taller 2800px*/
   border: none;
+  @include at-media(desktop) {
+    min-height: 157rem; /* breakpoint, can be shorter 2512px */
+  }
 }
